--- a/index.html
+++ b/index.html
@@ -772,20 +772,17 @@
                 ),
                 React.createElement('nav', { style: styles.nav },
                     React.createElement('div', { style: styles.navBrand },
-                        React.createElement('img', { 
-                            src: 'logo.png',
-                            alt: 'Atara Studios Logo',
-                            style: styles.logo,
-                            onError: (e) => {
-                                const alternatives = ['logo.jpg', 'logo.jpeg', 'logo.svg', 'assets/logo.png', 'images/logo.png', 'public/logo.png'];
-                                const currentIndex = alternatives.indexOf(e.target.src.split('/').pop()) + 1;
-                                if (currentIndex < alternatives.length) {
-                                    e.target.src = alternatives[currentIndex];
-                                } else {
-                                    e.target.style.display = 'none';
-                                }
-                            }
-                        }),
+                        React.createElement('svg', { 
+                            width: window.innerWidth <= 768 ? '24' : '28',
+                            height: window.innerWidth <= 768 ? '24' : '28',
+                            viewBox: '0 0 24 24',
+                            fill: 'none',
+                            stroke: isDarkTheme ? '#fff' : '#000',
+                            strokeWidth: 2
+                        },
+                            React.createElement('path', { d: 'M12 2L2 7v10c0 5.55 3.84 9.74 9 11 5.16-1.26 9-5.45 9-11V7l-10-5z' }),
+                            React.createElement('path', { d: 'M9 12l2 2 4-4' })
+                        ),
                         'ATARA STUDIOS'
                     ),
                     React.createElement('div', { style: styles.navLinks },
