--- a/index.html
+++ b/index.html
@@ -773,15 +773,16 @@
                 React.createElement('nav', { style: styles.nav },
                     React.createElement('div', { style: styles.navBrand },
                         React.createElement('svg', { 
-                            width: window.innerWidth <= 768 ? '24' : '28',
-                            height: window.innerWidth <= 768 ? '24' : '28',
-                            viewBox: '0 0 24 24',
-                            fill: 'none',
-                            stroke: isDarkTheme ? '#fff' : '#000',
-                            strokeWidth: 2
+                            width: window.innerWidth <= 768 ? '28' : '32',
+                            height: window.innerWidth <= 768 ? '28' : '32',
+                            viewBox: '0 0 300 300',
+                            fill: isDarkTheme ? '#fff' : '#000'
                         },
-                            React.createElement('path', { d: 'M12 2L2 7v10c0 5.55 3.84 9.74 9 11 5.16-1.26 9-5.45 9-11V7l-10-5z' }),
-                            React.createElement('path', { d: 'M9 12l2 2 4-4' })
+                            React.createElement('path', { d: 'M110 37L75 200C65 240 85 270 125 270C140 270 155 265 165 255L180 290L220 290L150 150L180 37L110 37Z' }),
+                            React.createElement('path', { d: 'M75 200L165 255C175 250 180 240 180 230L180 150L75 200Z' }),
+                            React.createElement('rect', { x: '110', y: '150', width: '8', height: '120' }),
+                            React.createElement('rect', { x: '130', y: '150', width: '50', height: '8' }),
+                            React.createElement('path', { d: 'M130 158L180 158C190 158 200 168 200 178C200 188 190 198 180 198L130 198L130 158Z' })
                         ),
                         'ATARA STUDIOS'
                     ),
