--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atara Studios</title>
+    <meta name="description" content="Premium Pilates, Dance & Strength Training at Atara Studios. Expert instructors, state-of-the-art equipment, personalized approach for all fitness levels.">
+    <meta name="keywords" content="pilates, dance, strength training, fitness, yoga, reformer, Karen, Nairobi">
+    <title>Atara Studios - Premium Pilates, Dance & Strength Training</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M20 15 L50 85 L80 15 L65 15 L50 45 L35 15 Z' fill='%23000'/%3E%3Cpath d='M25 65 L75 65 L70 75 L30 75 Z' fill='%23000'/%3E%3Crect x='47' y='60' width='6' height='25' fill='%23000'/%3E%3C/svg%3E"
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
