--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="pilates, dance, strength training, fitness, yoga, reformer, Karen, Nairobi">
     <title>Atara Studios - Premium Pilates, Dance & Strength Training</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M20 15 L50 85 L80 15 L65 15 L50 45 L35 15 Z' fill='%23000'/%3E%3Cpath d='M25 65 L75 65 L70 75 L30 75 Z' fill='%23000'/%3E%3Crect x='47' y='60' width='6' height='25' fill='%23000'/%3E%3C/svg%3E"
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <style>
@@ -29,7 +29,7 @@
 <body>
     <div id="root"></div>
     
-    <script type="text/babel" data-type="module">
+    <script type="text/babel">
         const { useState, useEffect } = React;
 
         class Particle {
